Category-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categoryservice
  template:
    metadata:
      labels:
        app: categoryservice
    spec:
      containers:
        - name: categoryservice
          image: fardinasadi/categoryservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: category-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: categoryservice
  ports:
  - name: categoryservice
    protocol: TCP
    port: 80
    targetPort: 80
