News-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsservice
  template:
    metadata:
      labels:
        app: newsservice
    spec:
      containers:
        - name: newsservice
          image: fardinasadi/newsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: news-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: newsservice
  ports:
  - name: newsservice
    protocol: TCP
    port: 80
    targetPort: 80
