Ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: fardin.com
      http:
        paths:
          - path: /api/category
            pathType: Prefix
            backend:
              service:
                name: category-clusterip-srv
                port:
                  number: 80
          - path: /api/news
            pathType: Prefix
            backend:
              service:
                name: news-clusterip-srv
                port:
                  number: 80
